--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/navbar.html.twig
@@ -1,59 +1,74 @@
 {# Template de la barre de navigation de l'espace admin #}
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#">{{project_name}}</a>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li{% if app.request.attributes.get('_route') == 'admin' %} class="active"{% endif %}>
-          	<a href="{{ path('admin') }}">Admin</a>
-          </li>
-          <li class="dropdown">
-          	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestion des contenus <b class="caret"></b></a>
-          	<ul class="dropdown-menu">
-          		<li{% if app.request.attributes.get('_route') == 'admin_content_pages' %} class="active"{% endif %}>
-          			<a href="{{ path('admin_content_pages') }}">Pages</a>
-          		</li>
-          		
-          		<li{% if app.request.attributes.get('_route') == 'admin_content_blog' %} class="active"{% endif %}>
-          			<a href="{{ path('admin_content_blog') }}">Blog</a>
-          			<ul>
-          				<li href="{{ path('admin_content_blog_categories') }}"><a>Catégories</a></li>
-          				<li href="{{ path('admin_content_blog_categories') }}"><a>Mot-clés</a></li>
-          			</ul>
-          		</li>
-          		
-          		<li{% if app.request.attributes.get('_route') == 'content_album' %} class="active"{% endif %}>
-          			<a href="{{ path('content_album') }}">Discrographie</a>
-          		</li>
-          		
-          		<li{% if app.request.attributes.get('_route') == 'content_link' %} class="active"{% endif %}>
-          			<a href="{{ path('content_link') }}">Liens</a>
-          		</li>          		
-          		
-          	</ul>
-          	
-          </li>
-          <li{% if app.request.attributes.get('_route') == 'admin_agenda' %} class="active"{% endif %}>
-          	<a href="{{ path('admin_agenda', {mode:'calendar'}) }}" title="Gestion des évènements">Agenda</a>
-          </li>
-          <li{% if app.request.attributes.get('_route') == 'admin_medias' %} class="active"{% endif %}>
-          	<a href="{{ path('admin_medias') }}" title="Gestion des médias">Médias</a>
-          </li>
-          <li{% if app.request.attributes.get('_route') == 'admin_user' %} class="active"{% endif %}>
-          	<a href="{{ path('admin_user') }}" title="Gestion des membres">Membres</a>
-          </li>
-        </ul>
-        
-        <ul class="nav pull-right">
-          <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-ban-circle icon-white"></i> {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
+<div class="navbar navbar-top navbar-inverse">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+
+            <a class="brand" href="#">{{ project_name }}</a>
+
+            <!-- the new toggle buttons -->
+            <ul class="nav pull-right">
+                <li class="toggle-primary-sidebar hidden-desktop" data-toggle="collapse"
+                    data-target=".nav-collapse-primary">
+                    <button type="button" class="btn btn-navbar"><i class="icon-th-list"></i></button>
+                </li>
+                <li class="hidden-desktop" data-toggle="collapse" data-target=".nav-collapse-top">
+                    <button type="button" class="btn btn-navbar"><i class="icon-align-justify"></i></button>
+                </li>
+            </ul>
+
+            <div class="nav-collapse nav-collapse-top collapse">
+                <ul class="nav full pull-right">
+                    <li class="dropdown user-avatar">
+
+                        <!-- the dropdown has a custom user-avatar class, this is the small avatar with the badge -->
+
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <span>
+                            <img class="menu-avatar" src="../../images/avatars/avatar1.jpg"/>
+                            <span>John Smith <i class="icon-caret-down"></i></span>
+                            <span class="badge badge-dark-red">5</span>
+                          </span>
+                        </a>
+
+                        <ul class="dropdown-menu">
+
+                            <!-- the first element is the one with the big avatar, add a with-image class to it -->
+
+                            <li class="with-image">
+                                <div class="avatar">
+                                    <img src="../../images/avatars/avatar1.jpg"/>
+                                </div>
+                                <span>John Smith</span>
+                            </li>
+
+                            <li class="divider"></li>
+
+                            <li><a href="#"><i class="icon-user"></i> <span>Profile</span></a></li>
+                            <li><a href="#"><i class="icon-cog"></i> <span>Settings</span></a></li>
+                            <li><a href="#"><i class="icon-envelope"></i> <span>Messages</span> <span class="label label-dark-red pull-right">5</span></a></li>
+                            <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i> <span>{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</span></a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul class="nav pull-right">
+
+                    <li class="active"><a href="{{ path('home') }}" title="Go home"><i class="icon-home"></i> Home</a>
+                    </li>
+                    <li{% if app.request.attributes.get('_route') == 'admin_user' %} class="active"{% endif %}>
+                        <a href="{{ path('admin_user') }}" title="Gestion des membres"><i class="icon-user"></i> Membres</a>
+                    </li>
+
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+
+        </div>
     </div>
-  </div>
 </div>
