--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
@@ -1,88 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title> {{project_name}} {% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Always force latest IE rendering engine or request Chrome Frame -->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+
+    <title> {{ project_name }} {% block title %}{% endblock %}</title>
+
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
-    <link href="{{ asset('bundles/amlweb/css/bootstrap/bootstrap.css') }}" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link href="{{ asset('bundles/amlweb/css/bootstrap/bootstrap-responsive.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+
+    <link href="{{ asset('bundles/amlweb/css/admin/application.css') }}" media="screen" rel="stylesheet" type="text/css"/>
+
+
+    {% block stylesheets %}{% endblock %}
+
+
+
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="{{ asset('bundles/amlweb/js/admin/vendor/html5shiv.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/amlweb/js/admin/vendor/excanvas.js') }}" type="text/javascript"></script>
     <![endif]-->
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ asset('bundles/amlweb/ico/favicon.ico') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('bundles/amlweb/ico/apple-touch-icon-144-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('bundles/amlweb/ico/apple-touch-icon-114-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/amlweb/ico/apple-touch-icon-72-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" href="{{ asset('bundles/amlweb/ico/apple-touch-icon-57-precomposed.png') }}">
-    
-    <link href="{{ asset('bundles/amlweb/css/admin.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/amlweb/css/form.css') }}" rel="stylesheet">
-
-    <link href="{{ asset('bundles/amlweb/css/fullcalendar/fullcalendar.css') }}" rel="stylesheet">
-	<link href="{{ asset('bundles/amlweb/css/fullcalendar/fullcalendar.print.css') }}" rel="stylesheet">
-    {% block stylesheets %}{% endblock %}
-    	
-    
-    
-    <script src="{{ asset('bundles/amlweb/js/jquery/jquery.1.9.1.min.js') }}"></script>
-    <script src="{{ asset('bundles/amlweb/js/jquery/jquery-ui-1.10.0.min.js') }}"></script>
-    <script src="{{ asset('bundles/amlweb/js/fullcalendar/fullcalendar.js') }}"></script>
+    <script src="{{ asset('bundles/amlweb/js/admin/application.js') }}" type="text/javascript"></script>
     {% block headerJs %}{% endblock %}
-  </head>
+</head>
 
-  <body>
-  	
-  	{# Barre de navigation top #}
-  	{% include "AmlWebBundle::Admin/Navigation/navbar.html.twig" %}  	
-   
-	{% if app.request.attributes.get('_route') == 'admin' %}
-		<div class="container">
-	{% else %}
-    	<div class="container-fluid">
-    {% endif %}
-    <!-- CONTENT HERE -->
-    
-	    {% if app.session.hasFlash('success') %}
-		    <div class="alert alert-success">
-		        {{ app.session.flash('success') }}
-		    </div>
-	 	{% endif %}
-	 	{% if app.session.hasFlash('notice') %}
-		    <div class="alert alert-error">
-		        {{ app.session.flash('notice') }}
-		    </div>
-	 	{% endif %}
-	 	{% if app.session.hasFlash('info') %}
-		    <div class="alert alert-info">
-		        {{ app.session.flash('info') }}
-		    </div>
-	 	{% endif %}  
-      
-      	{% block body %}{% endblock %}
+<body>
 
-		<hr>
-    
-	    <footer>
-	      <p>© AML 2012</p>
-	    </footer>
-    
-    </div> <!-- /container -->
-	
-	
-	
+    {# Barre de navigation top #}
+    {% include "AmlWebBundle::Admin/Navigation/navbar.html.twig" %}
+
+    <div class="sidebar-background">
+        <div class="primary-sidebar-background"></div>
+    </div>
+
+    {# Barre de navigation top #}
+    {% include "AmlWebBundle::Admin/Navigation/primary_sidebar.html.twig" %}
+
+
+
+    <div class="main-content">
+
+        {# Page title #}
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="area-top clearfix">
+                    <div class="pull-left header">
+                        <h3 class="title">
+                            <i class="icon-dashboard"></i>
+                            Dashboard
+                        </h3>
+                        <h5>
+                            A subtitle can be added here
+                        </h5>
+                    </div>
+                </div>
+            </div>
+         </div>
+
+        {# Breadcrumb line #}
+        <div class="container-fluid padded">
+            <div class="row-fluid">
+
+                <div id="breadcrumbs">
+                    <div class="breadcrumb-button blue">
+                        <span class="breadcrumb-label"><i class="icon-home"></i> Home</span>
+                        <span class="breadcrumb-arrow"><span></span></span>
+                    </div>
+
+                    <div class="breadcrumb-button">
+                      <span class="breadcrumb-label">
+                        <i class="icon-dashboard"></i> Dashboard
+                      </span>
+                        <span class="breadcrumb-arrow"><span></span></span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        {# Main content #}
+        <div class="container-fluid padded">
+            <!-- CONTENT HERE -->
+            {% if app.session.hasFlash('success') %}
+                <div class="alert alert-success">
+                    {{ app.session.flash('success') }}
+                </div>
+            {% endif %}
+            {% if app.session.hasFlash('notice') %}
+                <div class="alert alert-error">
+                    {{ app.session.flash('notice') }}
+                </div>
+            {% endif %}
+            {% if app.session.hasFlash('info') %}
+                <div class="alert alert-info">
+                    {{ app.session.flash('info') }}
+                </div>
+            {% endif %}
+
+            {% block body %}{% endblock %}
+
+            <hr>
+
+            <footer>
+                <p>© AML 2012</p>
+            </footer>
+        </div>
+
+    </div>
+    <!-- /container -->
+
+
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -92,6 +126,6 @@
 
     {% block javascripts %}{% endblock %}
 
-  </body>
+</body>
 </html>
  
