--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
@@ -59,6 +59,18 @@
 
             <div class="nav-collapse nav-collapse-top collapse">
                 <ul class="nav full pull-right">
+                    {% if app.user %}
+                        {% set userName = app.user.username %}
+
+                        {% if app.user.firstname %}
+                            {% set userName = app.user.firstname %}
+
+                            {% if app.user.lastname %}
+                                {% set userName = userName ~ ' ' ~ app.user.lastname %}
+                            {% endif %}
+
+                        {% endif %}
+
                     <li class="dropdown user-avatar">
 
                         <!-- the dropdown has a custom user-avatar class, this is the small avatar with the badge -->
@@ -66,7 +78,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                           <span>
                             <img class="menu-avatar" src="../../images/avatars/avatar1.jpg"/>
-                            <span>John Smith <i class="icon-caret-down"></i></span>
+
+                            <span>{{ userName }} <i class="icon-caret-down"></i></span>
                             <span class="badge badge-dark-red">5</span>
                           </span>
                         </a>
@@ -79,17 +92,16 @@
                                 <div class="avatar">
                                     <img src="../../images/avatars/avatar1.jpg"/>
                                 </div>
-                                <span>John Smith</span>
+                                <span>{{ userName }}</span>
                             </li>
 
                             <li class="divider"></li>
 
-                            <li><a href="#"><i class="icon-user"></i> <span>Profile</span></a></li>
                             <li><a href="#"><i class="icon-cog"></i> <span>Settings</span></a></li>
-                            <li><a href="#"><i class="icon-envelope"></i> <span>Messages</span> <span class="label label-dark-red pull-right">5</span></a></li>
                             <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i> <span>{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</span></a></li>
                         </ul>
                     </li>
+                    {% endif %}
                 </ul>
 
                 <ul class="nav pull-right">
